--- a/module2-Train/LS_DS_422_Train_Assignment.ipynb
+++ b/module2-Train/LS_DS_422_Train_Assignment.ipynb
@@ -807,7 +807,7 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE: "
+    "YOUR ANSWER HERE: Using the equation $$ \\frac{dy}{dw} =  x  $$ the value of weights is larger than when the data input x is smaller hence normalization"
    ]
   },
   {
