--- a/module3-Tune/LS_DS_423_Tune_Assignment.ipynb
+++ b/module3-Tune/LS_DS_423_Tune_Assignment.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "(75000, 784)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "(75000,)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -311,15 +311,49 @@
    "source": [
     "# use create_model to create a model \n",
     "\n",
-    "# YOUR CODE HERE\n",
     "model = create_model(n_layers=10, first_layer_nodes=500, last_layer_nodes=100, act_funct='relu')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_10 (Dense)             (None, 500)               392500    \n",
+      "_________________________________________________________________\n",
+      "dense_11 (Dense)             (None, 456)               228456    \n",
+      "_________________________________________________________________\n",
+      "dense_12 (Dense)             (None, 412)               188284    \n",
+      "_________________________________________________________________\n",
+      "dense_13 (Dense)             (None, 367)               151571    \n",
+      "_________________________________________________________________\n",
+      "dense_14 (Dense)             (None, 323)               118864    \n",
+      "_________________________________________________________________\n",
+      "dense_15 (Dense)             (None, 278)               90072     \n",
+      "_________________________________________________________________\n",
+      "dense_16 (Dense)             (None, 234)               65286     \n",
+      "_________________________________________________________________\n",
+      "dense_17 (Dense)             (None, 189)               44415     \n",
+      "_________________________________________________________________\n",
+      "dense_18 (Dense)             (None, 145)               27550     \n",
+      "_________________________________________________________________\n",
+      "dense_19 (Dense)             (None, 10)                1460      \n",
+      "=================================================================\n",
+      "Total params: 1,308,458\n",
+      "Trainable params: 1,308,458\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# run model.summary() and make sure that you understand the model architecture that you just built \n",
     "# Notice in the model summary how the number of nodes have been linearly incremented in decreasing values. \n",
